# odra-examples

./: CHANGELOG.md  Cargo.toml  Makefile  Odra.toml  README.md
.github/workflows/: odra-ci.yml
src/: balance_checker.rs  erc20.rs  lib.rs  ownable.rs  owned_token.rs
tests/: erc20.rs
tests/features/contracts/: erc20.feature
